--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 
-        <div class="mt-4 p-5 bg-primary text-white rounded">
+        <div class="m-3 p-5 bg-primary text-white rounded">
             <h1>My Team</h1>
         </div>
 
@@ -17,12 +17,36 @@
             <div class="row">
             <div class="col-md-4 col-sm-12">
                 <div class="card">
+                <div class="card-header text-white bg-primary">Kevin </div>
                     <div class="card-body">
-                        <h4 class="card-title">Kevin</h4>
                         <p class="card-text">ID: 1</p>
                         <p class="card-text">Manager</p>
-                        <p class="card-text">kldpd22@gmail.com</p>
+                        <p class="card-text">Email: kldpd22@gmail.com</p>
                         <p class="card-text">Office: 1</p>
                     </div>
                 </div>
-            </div></div></body></html>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card">
+                <div class="card-header text-white bg-primary">John</div>
+                    <div class="card-body">
+                        <p class="card-text">ID: 2</p>
+                        <p class="card-text">Engineer</p>
+                        <p class="card-text">Email: john@gmail.com</p>
+                        <p class="card-text">github.com/john</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card">
+                <div class="card-header text-white bg-primary">Barry</div>
+                    <div class="card-body">
+                        <p class="card-text">ID: 3</p>
+                        <p class="card-text">Intern</p>
+                        <p class="card-text">Email: barry@gmail.com</p>
+                        <p class="card-text">University of Arizona</p>
+                    </div>
+                </div>
+            </div></div>
+    </body>
+    </html>
